--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-use-scroll-direction": "^0.1.0"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.18",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.19",
