--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@hotjar/browser": "^1.0.9",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@use-gesture/react": "^10.3.0",
     "framer-motion": "^11.0.8",
+    "maath": "^0.10.8",
     "next": "14.1.2",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
