--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.2",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
+    "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
