--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.17.10",
     "@use-gesture/react": "^10.3.0",
     "framer-motion": "^11.0.8",
+    "gsap": "^3.12.5",
     "next": "14.1.2",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
@@ -23,6 +24,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
     "react-lottie-player": "^1.5.6",
+    "react-type-animation": "^3.2.0",
     "react-use-scroll-direction": "^0.1.0"
   },
   "devDependencies": {
