--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "next": "14.1.2",
+    "nodemailer": "^7.0.3",
+    "openai": "^5.6.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-awesome-button": "^7.0.5",
@@ -25,11 +27,13 @@
     "react-icons": "^5.0.1",
     "react-lottie-player": "^1.5.6",
     "react-type-animation": "^3.2.0",
-    "react-use-scroll-direction": "^0.1.0"
+    "react-use-scroll-direction": "^0.1.0",
+    "upup-react-file-uploader": "^1.4.6"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.18",
     "@types/node": "^20.11.24",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
