--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.12.5",
     "next": "14.1.2",
     "nodemailer": "^7.0.3",
+    "nprogress": "^0.2.0",
     "openai": "^5.6.0",
     "prisma": "^6.12.0",
     "react": "^18.2.0",
@@ -37,6 +38,7 @@
     "@types/gtag.js": "^0.0.18",
     "@types/node": "^20.11.24",
     "@types/nodemailer": "^6.4.17",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
