--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.0.1",
     "react-lottie-player": "^1.5.6",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "react-use-scroll-direction": "^0.1.0",
     "upup-react-file-uploader": "^1.4.6"
